<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">GithubUser</string>
    <string name="username">username</string>
    <string name="name">name</string>
    <string name="bio">bio</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="repo">repo</string>
    <string name="value_following" translatable="false">23</string>
    <string name="value_followers" translatable="false">10</string>
    <string name="value_repo" translatable="false">4</string>
    <string name="image_backdrop">Image backdrop</string>
    <string name="image_icon">Image icon</string>
    <string name="image_avatar">Image avatar</string>
    <string name="user_not_found">User not found</string>
    <string name="search_text">Search for a github user</string>
    <string name="favorite">Favorite</string>
    <string name="language">Language</string>
    <string name="language_summary">Change language</string>
    <string name="reminder">Daily reminder</string>
    <string name="reminder_on">Daily reminder on</string>
    <string name="reminder_off">Daily reminder off</string>
    <string name="locale_key" translatable="false">locale</string>
    <string name="reminder_key" translatable="false">reminder</string>
    <string name="reminder_time_key" translatable="false">reminderTime</string>
    <string name="reminder_time_title">Set reminder</string>
    <string name="reminder_time_summary">Reminder set on %s</string>
    <string name="title_home_fragment">Github User\'s</string>
    <string name="title_favorite_fragment">Favorite User\'s</string>
    <string name="title_detail_activity">Detail User</string>


    <string name="channel_id" translatable="false">Channel_Reminder</string>
    <string name="channel_name" translatable="false">Github User-%s</string>
    <string name="notification_title" translatable="false">Daily Reminder</string>
    <string name="notification_message" translatable="false">Let\'s find popular user from Github!</string>
    <string name="notification_type" translatable="false">DailyReminder</string>

    <string name="github_notification_channel_id" translatable="false">github_channel</string>
    <string name="github_notification_channel_name" translatable="false">Github User</string>
    <string name="reminder_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="reminder_notification_channel_name" translatable="false">Daily Reminder</string>
    <string name="reminder_notification_channel_description" translatable="false">Daily Reminder</string>
    <string name="snooze" translatable="false">Snooze</string>

    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="favorite_users" translatable="false">Favorite Users</string>
    <string name="empty_data" translatable="false">No data</string>
    <string name="empty_favorite">There are no favorite users</string>
</resources>